Moved the index.html to /beta during renovations

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
 	<title>Hops - {{ page.title }}</title>
 	<base ref="http://hopsapp.com" />
 	<meta name="author" content="Gordon Fontenot" />
-	<meta name="description" content="editor | shooter | geek" />
+	<meta name="description" content="Hops for iOS" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
 	<link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/hopsapp" />
 	<link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen, projection" charset="utf-8">
