Add soom google analytics

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen, projection" charset="utf-8">
 	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" charset="utf-8">
 	
-<!--	{% include analytics.html %} -->
+  {% include analytics.html %}
 	
 </head>
 <body>
