--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body
 {
 	background-color: #002B38;
-	color: #00B4AA;
+  color: #00B4AA;
 /*	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;*/
 	font-weight: 300;
 	line-height: 1.3;
@@ -129,9 +129,9 @@ div#content
 /*	margin-bottom: 50px;
 	margin-top: 15px;*/
 	font-size: 18px;
-/*	width: 100%;*/
-	width: 50%;
-	margin-left: 25%;
+  width: 100%;
+/*  width: 50%;*/
+/*  margin-left: 25%;*/
 	min-height: 350px;
 }
 
@@ -164,12 +164,12 @@ div.footnotes
 	color: #777;
 }
 
-div#info
+/*div#info
 {
-	float: right;
-}
+  float: right;
+}*/
 
-div#screenshots
+/*div#screenshots
 {
-	float: left;
-}
+  float: left;
+}*/
