begin moving to the 1140 px grid system

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,27 +8,29 @@
 	<base ref="http://hopsapp.com" />
 	<meta name="author" content="Gordon Fontenot" />
 	<meta name="description" content="Hops for iOS" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
 	<link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/hopsapp" />
-	<link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen, projection" charset="utf-8">
-	<link rel="stylesheet" href="/css/main.css" type="text/css" media="screen, projection" charset="utf-8">
+	
+	{% include javascript.html %}
+	
+	{% include css.html %}
 	
   {% include analytics.html %}
 	
 </head>
 <body>
 	
-<div id="main-body">
-  
-	<div class="nav">
-	  <a href="/">Home</a> | <a href="/blog">Blog</a> | <a href="/about">About</a> | <a href="/contact">Contact</a>
+<div class="container" id="main-body">
+  <div class="row">
+  	<div class="sixcolumn nav">
+  	  <a href="/">Home</a> | <a href="/blog">Blog</a> | <a href="/about">About</a> | <a href="/contact">Contact</a>
+    </div>
   </div>
   
 	<div id="content">
 		{{ content }}
 	</div>
-	<div style="clear:both">
-	<div class="footer">
+	
+	<div class="row footer">
 	  Site lovingly crafted by <a href="http://gordonfontenot.com">Gordon Fontenot</a>, powered by <a href="http://www.jekyllrb.com">Jekyll</a>, and hosted at <a href="http://www.github.com">GitHub</a><br>
   </div>
   
